--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "aliexpress-api": "^1.2.3",
     "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
     "node-telegram-bot-api": "^0.66.0"
