--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "aliexpress-api": "^1.2.3",
     "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "playwright": "^1.52.0",
+    "puppeteer": "^24.8.2"
   }
 }
